@@ -7,6 +7,6 @@ DIST gnome-keyring-2.24.1.tar.bz2 1125993 RMD160 17c6701ef7b35902780b6c72b79a3f0
 DIST gnome-keyring-2.26.1.tar.bz2 2738687 RMD160 0975197ae8e58a8d98a2ff11c062ec6c9cf74a79 SHA1 3ff24987392b3f51109709b2c020af3557155ef8 SHA256 47a79a7963652c19d9f566289fdb49ca286bfb1bef32b7e1032eb36c49bf7926
 EBUILD gnome-keyring-2.22.3-r1.ebuild 1561 RMD160 611e9df385cf103903a5d1ffdf031f0362876236 SHA1 80b3ca6e73262eedf2ba95e36985260f6b75c9c9 SHA256 9e9f8e90aeab57d964b27204df7cc653bdd4ed221ec887ab63984de43a6554fd
 EBUILD gnome-keyring-2.24.1.ebuild 1588 RMD160 96d9499b765260955c9e340e00a3b434c059ff50 SHA1 8a3cb0bb5ec11749ccef1e120f692d9aa88bbfab SHA256 ca200aae39f0bfb438a3e1270ba62321f2ff823164b396463a43a39b9bf46153
-EBUILD gnome-keyring-2.26.1-r1.ebuild 1757 RMD160 bf50a6e9df0560c752be8a6200b3d3c7d7610e57 SHA1 84d710ca9b56a96ebb18b994a151a98651853ed8 SHA256 9eba9435542b08766e0eb478ea53f13bda1d83c9b93910942222acb32d05e990
-MISC ChangeLog 18861 RMD160 4f5450c54fcbe546eec638529a1a6c14982236d1 SHA1 55549dad85cae615c0f5b2daecd23252986848f4 SHA256 29e81012666360f79fceef3f4379de84af8ce835b48a622f243e29ea440f14b4
+EBUILD gnome-keyring-2.26.1-r1.ebuild 1952 RMD160 47e1a06dd10fddd9d47720f15c0ba0cd1975cef6 SHA1 2688f804c15d3bdbf9230ccefe0a55cafd35f771 SHA256 99287476b401129e79c5484cea329da35979b4809e6d5f57379708891cfcd0f5
+MISC ChangeLog 19046 RMD160 ff211ab966cfb4a1d9a40c8b8a934551423a8024 SHA1 41fce41543f2d238bf61e197330bc402b1cb04e9 SHA256 b1127eb20bb813b258aeef85978464063d8f4c710f6763ced5ca6cf5907caef5
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
